<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg1"
    tools:context=".Login">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="305dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_person_black_24dp">
    </ImageView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/darkk"
        android:textColorHint="@color/darkk"
        android:ems="10"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:hint="@string/l2"
        android:inputType="textEmailAddress"></EditText>

    <EditText
        android:id="@+id/pwd"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:hint="@string/l3"
        android:textColor="@color/darkk"
        android:textColorHint="@color/darkk"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:inputType="textPassword"></EditText>

        <TextView
            android:id="@+id/forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/darkk"
            android:text="Forgot Password?" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>


    </LinearLayout>
    <Button
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l1"
        android:textColor="@color/darkk"
        android:layout_gravity="center_horizontal"
        ></Button>

    <TextView
        android:id="@+id/next_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/darkk"
        android:textColorHint="@color/darkk"
        android:text="@string/ll"
        android:layout_gravity="center_horizontal"
        ></TextView>

</LinearLayout>